sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:11: error: '<-' expected but ')' found.
    for (i+ecart<getNombreValeurs()-1){
                                     ^AlgCombSort:18: error: illegal start of simple expression
  }while (inverse) || ecart>1
  ^AlgCombSort:18: error: ';' expected but identifier found.
  }while (inverse) || ecart>1
                   ^